[package]
name = "game101"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.14.0"
opencv = "0.53.1"
obj-rs = "0.6.3"
# opencv = {version = "0.53.1", features = ["buildtime-bindgen"]}
# opencv = {version = "0.53.1", default-features = false, features = ["buildtime-bindgen"]}